# transcriptr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/transcriptr/: cli.py  config.py  exceptions.py  validation.py
