[project]
name = "transcriptr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "cov>=0.1.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "rich-click>=1.9.8",
    "ruff>=0.15.20",
]

[project.scripts]
transcriptr = "transcriptr.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

markers = [
    "integration: integration tests",
    "slow: slow tests",
]
